Update contact section heading and placeholders, add education quote

--- a/experience.html
+++ b/experience.html
@@ -188,6 +188,12 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="content-card fade-in" style="margin-top: 2rem; text-align: center;">
+                    <p class="intro-text" style="font-style: italic; color: var(--text-secondary); margin: 0;">
+                        I learned a lot, but the real learning happens in the code editor!
+                    </p>
+                </div>
             </section>
 
             <section id="awards" class="section">
