--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <main class="main-content">
             <section id="contact-section" class="section">
                 <div class="section-header">
-                    <h2 class="section-heading">Get In Touch</h2>
+                    <h2 class="section-heading">Let's work together!</h2>
                     <div class="terminal-dots">
                         <span class="dot red"></span>
                         <span class="dot yellow"></span>
@@ -65,15 +65,15 @@
                             <form id="contact-form" class="contact-form">
                                 <div class="form-group">
                                     <label for="name">Name</label>
-                                    <input type="text" id="name" name="name" placeholder="Enter your Name" required>
+                                    <input type="text" id="name" name="name" placeholder="Drop your name" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <input type="email" id="email" name="email" placeholder="Enter your Email" required>
+                                    <input type="email" id="email" name="email" placeholder="wanna hear back? Add your email" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="message">Message</label>
-                                    <textarea id="message" name="message" rows="4" placeholder="Enter your Message" required></textarea>
+                                    <textarea id="message" name="message" rows="4" placeholder="say hello or drop a note" required></textarea>
                                 </div>
                                 <button type="submit" class="submit-button">
                                     <span>Submit</span>
