Fix contact form placeholders capitalization and make skill icons clickable to open documentation

--- a/index.html
+++ b/index.html
@@ -105,54 +105,54 @@
                         <div class="skills-section">
                             <br>
                             <div class="tech-grid animated">
-                                <div class="tech-item" data-tech="Python">
+                                <div class="tech-item" data-tech="Python" data-doc-link="https://docs.python.org/">
                                     <img src="images/icons/python.png" alt="Python">
                                     <span>Python</span>
                                 </div>
-                                <div class="tech-item" data-tech="Java">
+                                <div class="tech-item" data-tech="Java" data-doc-link="https://docs.oracle.com/javase/">
                                     <img src="images/icons/java.png" alt="Java">
                                     <span>Java</span>
                                 </div>
-                                <div class="tech-item" data-tech="JavaScript">
+                                <div class="tech-item" data-tech="JavaScript" data-doc-link="https://developer.mozilla.org/en-US/docs/Web/JavaScript">
                                     <img src="images/icons/js.png" alt="JavaScript">
                                     <span>JavaScript</span>
                                 </div>
-                                <div class="tech-item" data-tech="C">
+                                <div class="tech-item" data-tech="C" data-doc-link="https://en.cppreference.com/">
                                     <img src="images/icons/c.png" alt="C/C++">
                                     <span>C/C++</span>
                                 </div>
-                                <div class="tech-item" data-tech="React">
+                                <div class="tech-item" data-tech="React" data-doc-link="https://react.dev/">
                                     <img src="images/icons/react.png" alt="React">
                                     <span>React</span>
                                 </div>
-                                <div class="tech-item" data-tech="Node.js">
+                                <div class="tech-item" data-tech="Node.js" data-doc-link="https://nodejs.org/docs/">
                                     <img src="images/icons/nodejs.png" alt="Node.js">
                                     <span>Node.js</span>
                                 </div>
-                                <div class="tech-item" data-tech="TypeScript">
+                                <div class="tech-item" data-tech="TypeScript" data-doc-link="https://www.typescriptlang.org/docs/">
                                     <img src="images/icons/typescript.png" alt="TypeScript">
                                     <span>TypeScript</span>
                                 </div>
-                                <div class="tech-item" data-tech="CSS">
+                                <div class="tech-item" data-tech="CSS" data-doc-link="https://developer.mozilla.org/en-US/docs/Web/CSS">
                                     <img src="images/icons/css.png" alt="CSS">
                                     <span>CSS</span>
                                 </div>
-                                <div class="tech-item" data-tech="AWS">
+                                <div class="tech-item" data-tech="AWS" data-doc-link="https://docs.aws.amazon.com/">
                                     <img src="images/icons/aws.png" alt="AWS">
                                     <span>AWS</span>
                                     <div class="tech-hover-detail">
                                         S3, Nova API, Lambda
                                     </div>
                                 </div>
-                                <div class="tech-item" data-tech="Git">
+                                <div class="tech-item" data-tech="Git" data-doc-link="https://git-scm.com/doc">
                                     <img src="images/icons/git.png" alt="Git">
                                     <span>Git</span>
                                 </div>
-                                <div class="tech-item" data-tech="Linux">
+                                <div class="tech-item" data-tech="Linux" data-doc-link="https://www.kernel.org/doc/">
                                     <img src="images/icons/linux.png" alt="Linux">
                                     <span>Linux</span>
                                 </div>
-                                <div class="tech-item" data-tech="Bash">
+                                <div class="tech-item" data-tech="Bash" data-doc-link="https://www.gnu.org/software/bash/manual/">
                                     <img src="images/icons/bash.png" alt="Bash">
                                     <span>Bash</span>
                                 </div>
