--- a/contact.html
+++ b/contact.html
@@ -69,11 +69,11 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Email</label>
-                                    <input type="email" id="email" name="email" placeholder="wanna hear back? Add your email" required>
+                                    <input type="email" id="email" name="email" placeholder="Wanna hear back? Add your email" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="message">Message</label>
-                                    <textarea id="message" name="message" rows="4" placeholder="say hello or drop a note" required></textarea>
+                                    <textarea id="message" name="message" rows="4" placeholder="Say hello or drop a note" required></textarea>
                                 </div>
                                 <button type="submit" class="submit-button">
                                     <span>Submit</span>
