Change contact heading back to Get In Touch, convert ML/AI and LLM sections to icon-based with horizontal scrolling

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <main class="main-content">
             <section id="contact-section" class="section">
                 <div class="section-header">
-                    <h2 class="section-heading">Let's work together!</h2>
+                    <h2 class="section-heading">Get In Touch</h2>
                     <div class="terminal-dots">
                         <span class="dot red"></span>
                         <span class="dot yellow"></span>
