--- a/index.html
+++ b/index.html
@@ -158,12 +158,80 @@
                                 </div>
 
                             </div>
-                            <div class="skills-categories">
-                                <div class="skill-category">
-                                    <strong>ML & AI:</strong> PyTorch, TensorFlow, Hugging Face, CNNs, Transformers, LLMs, Computer Vision, YOLO, OpenCV
+                            
+                            <div class="skills-section-title" style="margin-top: 2rem; margin-bottom: 1rem;">
+                                <h4 style="color: var(--accent-primary); font-size: 0.9rem; margin-bottom: 0.75rem;">ML & AI</h4>
+                            </div>
+                            <div class="tech-grid-scroll">
+                                <div class="tech-item" data-tech="PyTorch" data-doc-link="https://pytorch.org/docs/">
+                                    <div class="tech-icon-text">🔥</div>
+                                    <span>PyTorch</span>
                                 </div>
-                                <div class="skill-category">
-                                    <strong>LLM Frameworks:</strong> LangChain, LangGraph, LlamaIndex, OpenAI API, Anthropic Claude, CrewAI, AutoGen
+                                <div class="tech-item" data-tech="TensorFlow" data-doc-link="https://www.tensorflow.org/api_docs">
+                                    <div class="tech-icon-text">🧠</div>
+                                    <span>TensorFlow</span>
+                                </div>
+                                <div class="tech-item" data-tech="Hugging Face" data-doc-link="https://huggingface.co/docs">
+                                    <div class="tech-icon-text">🤗</div>
+                                    <span>Hugging Face</span>
+                                </div>
+                                <div class="tech-item" data-tech="CNNs" data-doc-link="https://pytorch.org/tutorials/beginner/blitz/neural_networks_tutorial.html">
+                                    <div class="tech-icon-text">🖼️</div>
+                                    <span>CNNs</span>
+                                </div>
+                                <div class="tech-item" data-tech="Transformers" data-doc-link="https://huggingface.co/docs/transformers">
+                                    <div class="tech-icon-text">⚡</div>
+                                    <span>Transformers</span>
+                                </div>
+                                <div class="tech-item" data-tech="LLMs" data-doc-link="https://huggingface.co/docs/transformers">
+                                    <div class="tech-icon-text">💬</div>
+                                    <span>LLMs</span>
+                                </div>
+                                <div class="tech-item" data-tech="Computer Vision" data-doc-link="https://opencv.org/">
+                                    <div class="tech-icon-text">👁️</div>
+                                    <span>Computer Vision</span>
+                                </div>
+                                <div class="tech-item" data-tech="YOLO" data-doc-link="https://docs.ultralytics.com/">
+                                    <div class="tech-icon-text">🎯</div>
+                                    <span>YOLO</span>
+                                </div>
+                                <div class="tech-item" data-tech="OpenCV" data-doc-link="https://docs.opencv.org/">
+                                    <div class="tech-icon-text">📷</div>
+                                    <span>OpenCV</span>
+                                </div>
+                            </div>
+
+                            <div class="skills-section-title" style="margin-top: 2rem; margin-bottom: 1rem;">
+                                <h4 style="color: var(--accent-primary); font-size: 0.9rem; margin-bottom: 0.75rem;">LLM Frameworks</h4>
+                            </div>
+                            <div class="tech-grid-scroll">
+                                <div class="tech-item" data-tech="LangChain" data-doc-link="https://python.langchain.com/docs/">
+                                    <div class="tech-icon-text">🔗</div>
+                                    <span>LangChain</span>
+                                </div>
+                                <div class="tech-item" data-tech="LangGraph" data-doc-link="https://langchain-ai.github.io/langgraph/">
+                                    <div class="tech-icon-text">🕸️</div>
+                                    <span>LangGraph</span>
+                                </div>
+                                <div class="tech-item" data-tech="LlamaIndex" data-doc-link="https://docs.llamaindex.ai/">
+                                    <div class="tech-icon-text">🦙</div>
+                                    <span>LlamaIndex</span>
+                                </div>
+                                <div class="tech-item" data-tech="OpenAI API" data-doc-link="https://platform.openai.com/docs">
+                                    <div class="tech-icon-text">🤖</div>
+                                    <span>OpenAI API</span>
+                                </div>
+                                <div class="tech-item" data-tech="Anthropic Claude" data-doc-link="https://docs.anthropic.com/">
+                                    <div class="tech-icon-text">🧬</div>
+                                    <span>Claude</span>
+                                </div>
+                                <div class="tech-item" data-tech="CrewAI" data-doc-link="https://docs.crewai.com/">
+                                    <div class="tech-icon-text">👥</div>
+                                    <span>CrewAI</span>
+                                </div>
+                                <div class="tech-item" data-tech="AutoGen" data-doc-link="https://microsoft.github.io/autogen/">
+                                    <div class="tech-icon-text">⚙️</div>
+                                    <span>AutoGen</span>
                                 </div>
                             </div>
                         </div>
