--- a/experience.html
+++ b/experience.html
@@ -258,6 +258,7 @@
                                 <span class="tag">Education</span>
                                 <span class="tag">Networking</span>
                             </div>
+                            <a href="https://drive.google.com/file/d/1COyUAqH_ch-Vc17DC4zxIiGfVVpGThk1/view?usp=sharing" target="_blank" class="certificate-link">View Certificate →</a>
                         </div>
                     </div>
 
@@ -293,6 +294,7 @@
                                 <span class="tag">Leadership</span>
                                 <span class="tag">Professional Development</span>
                             </div>
+                            <a href="https://drive.google.com/file/d/1oYTVBi5jJtQC00Qj8gAYBKYgwXaQdqXh/view?usp=sharing" target="_blank" class="certificate-link">View Certificate →</a>
                         </div>
                     </div>
 
