--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             <div class="skills-section-title" style="margin-top: 2rem; margin-bottom: 1rem;">
                                 <h4 style="color: var(--accent-primary); font-size: 0.9rem; margin-bottom: 0.75rem;">ML & AI</h4>
                             </div>
-                            <div class="tech-grid-scroll">
+                            <div class="tech-grid">
                                 <div class="tech-item" data-tech="PyTorch" data-doc-link="https://pytorch.org/docs/">
                                     <div class="tech-icon-text">🔥</div>
                                     <span>PyTorch</span>
@@ -204,7 +204,7 @@
                             <div class="skills-section-title" style="margin-top: 2rem; margin-bottom: 1rem;">
                                 <h4 style="color: var(--accent-primary); font-size: 0.9rem; margin-bottom: 0.75rem;">LLM Frameworks</h4>
                             </div>
-                            <div class="tech-grid-scroll">
+                            <div class="tech-grid">
                                 <div class="tech-item" data-tech="LangChain" data-doc-link="https://python.langchain.com/docs/">
                                     <div class="tech-icon-text">🔗</div>
                                     <span>LangChain</span>
@@ -386,6 +386,7 @@
                         <h3>An Advanced Deepfake Detection System leveraging DeepfakeBench and Explainable AI</h3>
                         <p class="publication-venue">DFRWS Digital Forensics Conference</p>
                         <p class="publication-description">Research poster presented at the DFRWS Digital Forensics Conference on advanced deepfake detection methodologies.</p>
+                        <a href="https://drive.google.com/file/d/1QlUmLQYlt7YbbvpLJcubt9fiCfRlPrs3/view?usp=sharing" target="_blank" class="certificate-link">View Certificate →</a>
                     </div>
                 </div>
             </section>
