--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,6 @@
             <a href="index.html">About</a>
             <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
-            <a href="blogs.html">Blogs</a>
             <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -188,12 +187,6 @@
                         </div>
                     </div>
                 </div>
-                
-                <div class="content-card fade-in" style="margin-top: 2rem; text-align: center;">
-                    <p class="intro-text" style="font-style: italic; color: var(--text-secondary); margin: 0;">
-                        I learned a lot, but the real learning happens in the code editor!
-                    </p>
-                </div>
             </section>
 
             <section id="awards" class="section">
@@ -222,6 +215,7 @@
                                 <span class="tag">Diversity</span>
                                 <span class="tag">Community</span>
                             </div>
+                            <a href="https://drive.google.com/file/d/11He5mVOqSzyEVne71d8A9ySRexijjTA5/view?usp=sharing" target="_blank" class="timeline-link">View Certificate →</a>
                         </div>
                     </div>
 
@@ -240,6 +234,7 @@
                                 <span class="tag">UI/UX Design</span>
                                 <span class="tag">Leadership</span>
                             </div>
+                            <a href="https://drive.google.com/file/d/1eVF90K34XS2Q-nUIBDKw8xqL_vvaMg3K/view?usp=sharing" target="_blank" class="timeline-link">View Certificate →</a>
                         </div>
                     </div>
 
@@ -258,7 +253,6 @@
                                 <span class="tag">Education</span>
                                 <span class="tag">Networking</span>
                             </div>
-                            <a href="https://drive.google.com/file/d/1COyUAqH_ch-Vc17DC4zxIiGfVVpGThk1/view?usp=sharing" target="_blank" class="certificate-link">View Certificate →</a>
                         </div>
                     </div>
 
@@ -277,6 +271,10 @@
                                 <span class="tag">Machine Learning</span>
                                 <span class="tag">Curriculum Development</span>
                             </div>
+                            <div style="display: flex; gap: 1rem; margin-top: 0.75rem; flex-wrap: wrap;">
+                                <a href="https://drive.google.com/file/d/1jr0U5Re00wr605tCYmhp-IMpfNskEZ0y/view?usp=sharing" target="_blank" class="timeline-link">View Certificate 1 →</a>
+                                <a href="https://drive.google.com/file/d/1OmR3B8KJuF0nPj4UsBy8HwkLCx4rUu-h/view?usp=sharing" target="_blank" class="timeline-link">View Certificate 2 →</a>
+                            </div>
                         </div>
                     </div>
 
@@ -294,7 +292,6 @@
                                 <span class="tag">Leadership</span>
                                 <span class="tag">Professional Development</span>
                             </div>
-                            <a href="https://drive.google.com/file/d/1oYTVBi5jJtQC00Qj8gAYBKYgwXaQdqXh/view?usp=sharing" target="_blank" class="certificate-link">View Certificate →</a>
                         </div>
                     </div>
 
@@ -313,6 +310,7 @@
                                 <span class="tag">Startups</span>
                                 <span class="tag">Silicon Valley</span>
                             </div>
+                            <a href="https://drive.google.com/file/d/1S5-N8YLJOjzY7Uh89MszXwp5Fk_WTO_2/view" target="_blank" class="timeline-link">View Certificate →</a>
                         </div>
                     </div>
 
@@ -340,7 +338,7 @@
 
     <div class="footer-background">
         <div class="contact-footer">
-            <p>© 2026 Saakshi Gupta. All rights reserved.<br>Made with ❤️ using HTML, CSS, and JavaScript.</p>
+            <p>© 2025 Saakshi Gupta. All rights reserved.<br>Made with ❤️ using HTML, CSS, and JavaScript.</p>
         </div>
     </div>
 
