Restore education quote and add certificate links for Queensland AI Hub and UQ EAIT

--- a/experience.html
+++ b/experience.html
@@ -184,6 +184,7 @@
                                 <span class="tag">Data Science</span>
                                 <span class="tag">Scholarship</span>
                             </div>
+                            <p style="margin-top: 1rem; font-style: italic; color: var(--text-secondary);"><em>I learned a lot, but the real learning happens in the code editor!</em></p>
                         </div>
                     </div>
                 </div>
@@ -253,6 +254,7 @@
                                 <span class="tag">Education</span>
                                 <span class="tag">Networking</span>
                             </div>
+                            <a href="https://drive.google.com/file/d/1COyUAqH_ch-Vc17DC4zxIiGfVVpGThk1/view?usp=sharing" target="_blank" class="timeline-link">View Certificate →</a>
                         </div>
                     </div>
 
@@ -292,6 +294,7 @@
                                 <span class="tag">Leadership</span>
                                 <span class="tag">Professional Development</span>
                             </div>
+                            <a href="https://drive.google.com/file/d/1oYTVBi5jJtQC00Qj8gAYBKYgwXaQdqXh/view?usp=sharing" target="_blank" class="timeline-link">View Certificate →</a>
                         </div>
                     </div>
 
