Update education status, link texts, and add new blog post

--- a/blogs.html
+++ b/blogs.html
@@ -79,6 +79,20 @@
                             <a href="https://medium.com/@saakshigupta2002/i-built-a-multi-agent-customer-support-triage-system-with-crewai-and-traced-it-with-langsmith-ce7156549a55" target="_blank" class="blog-read-btn" onclick="event.stopPropagation();">Read on Medium →</a>
                         </div>
 
+                        <div class="project-card blog-card-style">
+                            <div class="project-icon">📚</div>
+                            <h3>Multi-Agent arXiv Self-Correcting & Adaptive RAG Pipeline</h3>
+                            <p class="blog-date">Published: January 2026</p>
+                            <p>Built a multi-agent arXiv self-correcting and adaptive RAG pipeline that intelligently retrieves, processes, and synthesizes research papers.</p>
+                            <div class="project-tech">
+                                <span class="tech-pill">RAG</span>
+                                <span class="tech-pill">Multi-Agent</span>
+                                <span class="tech-pill">LangGraph</span>
+                                <span class="tech-pill">Python</span>
+                            </div>
+                            <a href="https://medium.com/@saakshigupta2002/i-built-a-multi-agent-arxiv-self-correcting-and-adaptive-rag-pipeline-0780c881eeea" target="_blank" class="blog-read-btn" onclick="event.stopPropagation();">Read on Medium →</a>
+                        </div>
+
                         <!-- Add more blog posts here -->
                     </div>
                 </div>
