--- a/experience.html
+++ b/experience.html
@@ -175,7 +175,7 @@
                                 <h3><span class="company-name">University of Queensland</span> Bachelor's Degree in Software Engineering</h3>
                                 <div class="timeline-meta">
                                     <span class="timeline-location">Brisbane, AU</span>
-                                    <span class="timeline-duration">Completed</span>
+                                    <span class="timeline-duration">Graduated(2025)</span>
                                 </div>
                             </div>
                             <p>Bachelor's Degree in Software Engineering with a Data Science minor. Recipient of the UQ Global Connect Scholarship (25% tuition scholarship).</p>
@@ -216,7 +216,7 @@
                                 <span class="tag">Diversity</span>
                                 <span class="tag">Community</span>
                             </div>
-                            <a href="https://drive.google.com/file/d/11He5mVOqSzyEVne71d8A9ySRexijjTA5/view?usp=sharing" target="_blank" class="timeline-link">View Certificate →</a>
+                            <a href="https://drive.google.com/file/d/11He5mVOqSzyEVne71d8A9ySRexijjTA5/view?usp=sharing" target="_blank" class="timeline-link">ACM-W Team →</a>
                         </div>
                     </div>
 
@@ -235,7 +235,7 @@
                                 <span class="tag">UI/UX Design</span>
                                 <span class="tag">Leadership</span>
                             </div>
-                            <a href="https://drive.google.com/file/d/1eVF90K34XS2Q-nUIBDKw8xqL_vvaMg3K/view?usp=sharing" target="_blank" class="timeline-link">View Certificate →</a>
+                            <a href="https://drive.google.com/file/d/1eVF90K34XS2Q-nUIBDKw8xqL_vvaMg3K/view?usp=sharing" target="_blank" class="timeline-link">TEDxUQ Team →</a>
                         </div>
                     </div>
 
@@ -274,8 +274,8 @@
                                 <span class="tag">Curriculum Development</span>
                             </div>
                             <div style="display: flex; gap: 1rem; margin-top: 0.75rem; flex-wrap: wrap;">
-                                <a href="https://drive.google.com/file/d/1jr0U5Re00wr605tCYmhp-IMpfNskEZ0y/view?usp=sharing" target="_blank" class="timeline-link">View Certificate 1 →</a>
-                                <a href="https://drive.google.com/file/d/1OmR3B8KJuF0nPj4UsBy8HwkLCx4rUu-h/view?usp=sharing" target="_blank" class="timeline-link">View Certificate 2 →</a>
+                                <a href="https://drive.google.com/file/d/1jr0U5Re00wr605tCYmhp-IMpfNskEZ0y/view?usp=sharing" target="_blank" class="timeline-link">Project 1 →</a>
+                                <a href="https://drive.google.com/file/d/1OmR3B8KJuF0nPj4UsBy8HwkLCx4rUu-h/view?usp=sharing" target="_blank" class="timeline-link">Project 2 →</a>
                             </div>
                         </div>
                     </div>
