Update blog section styling to match project section layout and alignment

--- a/blogs.html
+++ b/blogs.html
@@ -59,12 +59,11 @@
                     </div>
                 </div>
                 
-                <div class="content-card fade-in">
-                    <p class="intro-text" style="margin-bottom: 2rem;">
-                        I write about AI, Machine Learning, and my journey in tech. Check out my articles on Medium!
-                    </p>
+                <p class="intro-text" style="margin-bottom: 2rem; margin-left: 0;">
+                    I write about AI, Machine Learning, and my journey in tech. Check out my articles on Medium!
+                </p>
 
-                    <div class="projects-grid">
+                <div class="projects-grid">
                         <div class="project-card blog-card-style">
                             <div class="project-icon">🤖</div>
                             <h3>Multi-Agent Customer Support Triage System</h3>
@@ -95,7 +94,6 @@
 
                         <!-- Add more blog posts here -->
                     </div>
-                </div>
             </section>
         </main>
     </div>
