Add Alzheimer's Disease Classification project with Vision Transformer

--- a/projects.html
+++ b/projects.html
@@ -187,6 +187,20 @@
                             <span class="tech-pill">Hackathon</span>
                         </div>
                     </div>
+
+                    <div class="project-card" id="alzheimers-vit"
+                        data-full-description="An MRI-based Alzheimer's disease classification project exploring the use of Vision Transformers (ViT) for medical image analysis. The system implements patch extraction, linear embeddings, positional encoding, and multi-head self-attention from scratch using TensorFlow/Keras, and is trained and evaluated on the ADNI dataset. The project examines performance limitations of transformer models without large-scale pretraining and highlights the role of transfer learning in medical imaging tasks.">
+                        <div class="project-icon">🧠</div>
+                        <h3>Alzheimer's Disease Classification <span class="project-company">Vision Transformer</span></h3>
+                        <p>An MRI-based Alzheimer's disease classification project exploring the use of Vision Transformers (ViT) for medical image analysis. The system implements patch extraction, linear embeddings, positional encoding, and multi-head self-attention from scratch using TensorFlow/Keras, and is trained and evaluated on the ADNI dataset.</p>
+                        <div class="project-tech">
+                            <span class="tech-pill">TensorFlow</span>
+                            <span class="tech-pill">Keras</span>
+                            <span class="tech-pill">Vision Transformers</span>
+                            <span class="tech-pill">Python</span>
+                            <span class="tech-pill">Medical Imaging</span>
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="content-card note-card fade-in">
