Add images to FutureVest project

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,8 @@
                     <div class="project-card" id="futurevest"
                         data-full-description="FutureVest is a web-based stock analysis platform that helps investors value stocks and discover growth opportunities across thousands of U.S. equities. It provides stock search, screening, watchlists, price alerts, technical analysis, and valuation tools. The platform uses a microservices architecture with containerized services deployed on AWS, enabling scalability and maintainability. Built with React/TypeScript frontend and Flask backend, deployed on AWS ECS Fargate with RDS PostgreSQL, featuring Docker containerization, JWT authentication, and Nginx reverse proxy for scalable, cloud-native architecture. Developed as part of CSSE6400 group project at UQ."
                         data-demo-link="https://www.youtube.com/watch?v=dNfTGW1w-aw"
-                        data-github-link="https://github.com/saakshigupta2002/FutureVest">
+                        data-github-link="https://github.com/saakshigupta2002/FutureVest"
+                        data-images="images/project/FutureVest.png,images/project/FutureVest_Stock_Scanner.png">
                         <div class="project-icon">📈</div>
                         <h3>FutureVest <span class="project-company">Stock Analysis | CSSE6400</span></h3>
                         <p>A web-based stock analysis platform helping investors value stocks and discover growth opportunities with screening, watchlists, alerts, and technical analysis tools.</p>
