--- a/blogs.html
+++ b/blogs.html
@@ -75,7 +75,7 @@
                                 <span class="tech-pill">Multi-Agent</span>
                                 <span class="tech-pill">Python</span>
                             </div>
-                            <div style="display: flex; flex-direction: column; gap: 0.5rem; margin-top: 0.75rem;">
+                            <div style="display: flex; flex-direction: row; gap: 1rem; margin-top: 0.75rem; flex-wrap: wrap;">
                                 <a href="https://medium.com/@saakshigupta2002/i-built-a-multi-agent-customer-support-triage-system-with-crewai-and-traced-it-with-langsmith-ce7156549a55" target="_blank" class="blog-read-btn" onclick="event.stopPropagation();">Read on Medium →</a>
                                 <a href="https://github.com/saakshigupta2002/Multi-Agent-Customer-Support-Triage-System" target="_blank" class="blog-read-btn" onclick="event.stopPropagation();">View on GitHub →</a>
                             </div>
@@ -92,7 +92,7 @@
                                 <span class="tech-pill">LangGraph</span>
                                 <span class="tech-pill">Python</span>
                             </div>
-                            <div style="display: flex; flex-direction: column; gap: 0.5rem; margin-top: 0.75rem;">
+                            <div style="display: flex; flex-direction: row; gap: 1rem; margin-top: 0.75rem; flex-wrap: wrap;">
                                 <a href="https://medium.com/@saakshigupta2002/i-built-a-multi-agent-arxiv-self-correcting-and-adaptive-rag-pipeline-0780c881eeea" target="_blank" class="blog-read-btn" onclick="event.stopPropagation();">Read on Medium →</a>
                                 <a href="https://github.com/saakshigupta2002/arxiv-rag" target="_blank" class="blog-read-btn" onclick="event.stopPropagation();">View on GitHub →</a>
                             </div>
