Add GitHub link to AIM AI project

--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,8 @@
                     </div>
 
                     <div class="project-card" id="aim-ai"
-                        data-full-description="Developed an AI-powered interviewer chatbot by fine-tuning the Mistral-7B language model using the QLoRA method, achieving an 18% improvement in Rouge-1 scores over the base model. Integrated speech-to-text using the Faster Whisper model with CTranslate2 to support audio input processing four times faster than the original Whisper model. Implemented speaking-pace analysis to maintain an optimal pace of 1–3 words per second.">
+                        data-full-description="Developed an AI-powered interviewer chatbot by fine-tuning the Mistral-7B language model using the QLoRA method, achieving an 18% improvement in Rouge-1 scores over the base model. Integrated speech-to-text using the Faster Whisper model with CTranslate2 to support audio input processing four times faster than the original Whisper model. Implemented speaking-pace analysis to maintain an optimal pace of 1–3 words per second."
+                        data-github-link="https://github.com/saakshigupta2002/aim-ai">
                         <div class="project-icon">🤖</div>                       
                         <h3>AIM AI <span class="project-company">AI Interviewer</span></h3>
                         <p>Developed an AI-powered interviewer chatbot by fine-tuning Mistral-7B using QLoRA, achieving 18% improvement in Rouge-1 scores with integrated speech-to-text processing 4x faster than original Whisper.</p>
