Add image to Co-Founder Matching project

--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,8 @@
                     <div class="project-card" id="cofounder-matching"
                         data-full-description="A mobile app that connects entrepreneurs with potential co-founders using an algorithm that evaluates compatibility across skills, interests, goals, startup stage, location, availability, and collaboration style. Users create profiles, receive personalized match recommendations with explanations, and interact through in-app messaging and event management. The platform uses a weighted scoring system to surface compatible matches and help users make informed decisions. Key features include multi-factor matching algorithm, real-time authentication, swipeable match interface, in-app messaging, and event calendar management. Developed as part of DECO3801 group project at UQ."
                         data-github-link="https://github.com/saakshigupta2002/Co-Founder-Matching"
-                        data-demo-link="https://drive.google.com/file/d/1xez-tBBpEBgXvrYNbOPn_La0YoZJnHVT/view?usp=sharing">
+                        data-demo-link="https://drive.google.com/file/d/1xez-tBBpEBgXvrYNbOPn_La0YoZJnHVT/view?usp=sharing"
+                        data-images="images/project/co-founder-matching.jpg">
                         <div class="project-icon">🤝</div>
                         <h3>Co-Founder Matching <span class="project-company">UQ Ventures | DECO3801</span></h3>
                         <p>A mobile app connecting entrepreneurs with potential co-founders using a multi-factor matching algorithm evaluating skills, interests, goals, and collaboration style.</p>
