Add images to Deepfake Detection project

--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,8 @@
                     <div class="project-card" id="deepfake-detection"
                         data-full-description="Created a multimodal deepfake analysis system integrating CNN/Vision Transformer detection, explainable AI techniques (SHAP, LIME) and image-to-text captioning with CLIP and attention mechanisms. Implemented a large-language-model contextual explanation module using Llama 3.1 and Ollama with custom prompt engineering to generate forensic insights. Developed a unified Python pipeline with PyTorch and Hugging Face Transformers and deployed RESTful APIs for integration."
                         data-demo-link="https://drive.google.com/file/d/1mQwquNxMFo-MwqUt5p2VNxpezJFIViQD/view?usp=sharing"
-                        data-huggingface-link="https://huggingface.co/spaces/saakshigupta/deepfake_detection_uq/tree/main">
+                        data-huggingface-link="https://huggingface.co/spaces/saakshigupta/deepfake_detection_uq/tree/main"
+                        data-images="images/project/deepfake-analyzer-homepage.png,images/project/deepfake-chat-analysis.png">
                         <div class="project-icon">🔍</div>                        
                         <h3>DF-P2E: Deepfake Detection <span class="project-company">CSIRO Research</span></h3>
                         <p>Created a multimodal deepfake analysis system integrating CNN/Vision Transformer detection with explainable AI techniques (SHAP, LIME) and LLM-powered forensic insights using Llama 3.1.</p>
