Add blog projects to projects page, merge VideoSpec and Creator-Brand Matching, fix image paths

--- a/projects.html
+++ b/projects.html
@@ -120,18 +120,49 @@
                         </div>
                     </div>
 
-                    <div class="project-card" id="videospec"
-                        data-full-description="Designed and built a multimodal video-analysis platform using Google Gemini Vision API, AWS Nova API and Python. Implemented asynchronous processing with asyncio, custom URL extraction and video embedding to analyse content across TikTok, Instagram and direct MP4 sources with over 15 classification parameters. Engineered a modular full-stack architecture with Streamlit, AWS S3 integration and OAuth2-authenticated Google Sheets API, providing real-time progress tracking and automated data transformation.">
-                        <div class="project-icon">🎬</div>
-                        <h3>VideoSpec <span class="project-company">Multimodal Content Analysis</span></h3>
-                        <p>Designed and built a multimodal video-analysis platform using Google Gemini Vision API, AWS Nova API and Python with async processing and 15+ classification parameters.</p>
+                    <div class="project-card" id="customer-support-triage"
+                        data-full-description="A production-ready customer support triage system built with CrewAI that classifies tickets, retrieves relevant policies, drafts responses, and enforces compliance — all with human-in-the-loop escalation. Four agents work in sequence: Triage Agent (classify ticket, set priority, decide escalation), KB Agent (search internal knowledge base for relevant policies), Responder Agent (draft customer reply using KB excerpts), and Policy QA Agent (remove risky language, enforce citations, confirm escalation). Features include automatic routing, escalation logic for security issues and fraud detection, LangSmith tracing for debugging, and evaluation metrics tracking."
+                        data-github-link="https://github.com/saakshigupta2002/Multi-Agent-Customer-Support-Triage-System">
+                        <div class="project-icon">🤖</div>
+                        <h3>Multi-Agent Customer Support Triage <span class="project-company">CrewAI</span></h3>
+                        <p>Built a multi-agent system for customer support triage using CrewAI framework with LangSmith for observability. Features ticket classification, policy retrieval, response drafting, and compliance enforcement.</p>
+                        <div class="project-tech">
+                            <span class="tech-pill">CrewAI</span>
+                            <span class="tech-pill">LangSmith</span>
+                            <span class="tech-pill">Multi-Agent</span>
+                            <span class="tech-pill">Python</span>
+                            <span class="tech-pill">LLMs</span>
+                        </div>
+                    </div>
+
+                    <div class="project-card" id="arxiv-rag"
+                        data-full-description="Built a multi-agent arXiv self-correcting and adaptive RAG pipeline that intelligently retrieves, processes, and synthesizes research papers. The system implements adaptive retrieval strategies, self-correction mechanisms for improved accuracy, and multi-agent coordination using LangGraph. Features include intelligent query routing, document relevance scoring, answer generation with citations, and self-evaluation loops for quality assurance."
+                        data-github-link="https://github.com/saakshigupta2002/arxiv-rag">
+                        <div class="project-icon">📚</div>
+                        <h3>arXiv Self-Correcting RAG Pipeline <span class="project-company">LangGraph</span></h3>
+                        <p>Built a multi-agent arXiv self-correcting and adaptive RAG pipeline that intelligently retrieves, processes, and synthesizes research papers with self-correction mechanisms.</p>
+                        <div class="project-tech">
+                            <span class="tech-pill">RAG</span>
+                            <span class="tech-pill">Multi-Agent</span>
+                            <span class="tech-pill">LangGraph</span>
+                            <span class="tech-pill">Python</span>
+                            <span class="tech-pill">LLMs</span>
+                        </div>
+                    </div>
+
+                    <div class="project-card" id="videospec-creator-matching"
+                        data-full-description="Led development of algorithms that analysed millions of creator profiles and matched their content styles with brand campaign requirements using advanced natural-language processing and computer-vision techniques. Built an LLM-driven system to generate personalised campaign briefs for creators based on historical performance, brand guidelines and campaign objectives. Designed and built a multimodal video-analysis platform using Google Gemini Vision API, AWS Nova API and Python. Implemented asynchronous processing with asyncio, custom URL extraction and video embedding to analyse content across TikTok, Instagram and direct MP4 sources with over 15 classification parameters. Engineered a modular full-stack architecture with Streamlit, AWS S3 integration and OAuth2-authenticated Google Sheets API, providing real-time progress tracking and automated data transformation.">
+                        <div class="project-icon">📊</div>
+                        <h3>VideoSpec & Creator-Brand Matching <span class="project-company">LINQIA</span></h3>
+                        <p>Built multimodal video-analysis platform with Gemini Vision API and developed algorithms analyzing millions of creator profiles with NLP and computer vision for brand-creator matching.</p>
                         <div class="project-tech">
                             <span class="tech-pill">Python</span>
                             <span class="tech-pill">Gemini Vision API</span>
                             <span class="tech-pill">AWS Nova</span>
+                            <span class="tech-pill">NLP</span>
+                            <span class="tech-pill">Computer Vision</span>
+                            <span class="tech-pill">LLMs</span>
                             <span class="tech-pill">Streamlit</span>
-                            <span class="tech-pill">asyncio</span>
-                            <span class="tech-pill">AWS S3</span>
                         </div>
                     </div>
 
@@ -148,21 +179,6 @@
                             <span class="tech-pill">Faster Whisper</span>
                             <span class="tech-pill">CTranslate2</span>
                             <span class="tech-pill">Python</span>
-                        </div>
-                    </div>
-
-                    <div class="project-card" id="creator-matching"
-                        data-full-description="Led development of algorithms that analysed millions of creator profiles and matched their content styles with brand campaign requirements using advanced natural-language processing and computer-vision techniques. Built an LLM-driven system to generate personalised campaign briefs for creators based on historical performance, brand guidelines and campaign objectives. Developed machine-learning pipelines to track and analyse creator content engagement across multiple social media platforms.">
-                        <div class="project-icon">📊</div>                        
-                        <h3>Creator-Brand Matching System <span class="project-company">LINQIA</span></h3>
-                        <p>Developed algorithms analyzing millions of creator profiles with NLP and computer vision, matching content styles to brand requirements with LLM-driven campaign brief generation.</p>
-                        <div class="project-tech">
-                            <span class="tech-pill">NLP</span>
-                            <span class="tech-pill">Computer Vision</span>
-                            <span class="tech-pill">LLMs</span>
-                            <span class="tech-pill">Machine Learning</span>
-                            <span class="tech-pill">Python</span>
-                            <span class="tech-pill">Data Pipelines</span>
                         </div>
                     </div>
 
